src/test/ui/pattern/usefulness/issue-35609.stderr
error[E0004]: non-exhaustive patterns: `(B, _)`, `(C, _)`, `(D, _)` and 2 more not covered
  --> $DIR/issue-35609.rs:10:11
   |
LL |     match (A, ()) {
   |           ^^^^^^^ patterns `(B, _)`, `(C, _)`, `(D, _)` and 2 more not covered
   |
   = note: the matched value is of type `(Enum, ())`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         (A, _) => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `(_, B)`, `(_, C)`, `(_, D)` and 2 more not covered
  --> $DIR/issue-35609.rs:14:11
   |
LL |     match (A, A) {
   |           ^^^^^^ patterns `(_, B)`, `(_, C)`, `(_, D)` and 2 more not covered
   |
   = note: the matched value is of type `(Enum, Enum)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         (_, A) => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `((B, _), _)`, `((C, _), _)`, `((D, _), _)` and 2 more not covered
  --> $DIR/issue-35609.rs:18:11
   |
LL |     match ((A, ()), ()) {
   |           ^^^^^^^^^^^^^ patterns `((B, _), _)`, `((C, _), _)`, `((D, _), _)` and 2 more not covered
   |
   = note: the matched value is of type `((Enum, ()), ())`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         ((A, ()), _) => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `((B, _), _)`, `((C, _), _)`, `((D, _), _)` and 2 more not covered
  --> $DIR/issue-35609.rs:22:11
   |
LL |     match ((A, ()), A) {
   |           ^^^^^^^^^^^^ patterns `((B, _), _)`, `((C, _), _)`, `((D, _), _)` and 2 more not covered
   |
   = note: the matched value is of type `((Enum, ()), Enum)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         ((A, ()), _) => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `((B, _), _)`, `((C, _), _)`, `((D, _), _)` and 2 more not covered
  --> $DIR/issue-35609.rs:26:11
   |
LL |     match ((A, ()), ()) {
   |           ^^^^^^^^^^^^^ patterns `((B, _), _)`, `((C, _), _)`, `((D, _), _)` and 2 more not covered
   |
   = note: the matched value is of type `((Enum, ()), ())`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         ((A, _), _) => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `S(B, _)`, `S(C, _)`, `S(D, _)` and 2 more not covered
  --> $DIR/issue-35609.rs:31:11
   |
LL |     match S(A, ()) {
   |           ^^^^^^^^ patterns `S(B, _)`, `S(C, _)`, `S(D, _)` and 2 more not covered
   |
note: `S` defined here
  --> $DIR/issue-35609.rs:6:8
   |
LL | struct S(Enum, ());
   |        ^
   = note: the matched value is of type `S`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         S(A, _) => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `Sd { x: B, .. }`, `Sd { x: C, .. }`, `Sd { x: D, .. }` and 2 more not covered
  --> $DIR/issue-35609.rs:35:11
   |
LL |     match (Sd { x: A, y: () }) {
   |           ^^^^^^^^^^^^^^^^^^^^ patterns `Sd { x: B, .. }`, `Sd { x: C, .. }`, `Sd { x: D, .. }` and 2 more not covered
   |
note: `Sd` defined here
  --> $DIR/issue-35609.rs:7:8
   |
LL | struct Sd { x: Enum, y: () }
   |        ^^
   = note: the matched value is of type `Sd`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         Sd { x: A, y: _ } => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `Some(B)`, `Some(C)`, `Some(D)` and 2 more not covered
  --> $DIR/issue-35609.rs:39:11
   |
LL |     match Some(A) {
   |           ^^^^^^^ patterns `Some(B)`, `Some(C)`, `Some(D)` and 2 more not covered
   |
note: `Option<Enum>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | / pub enum Option<T> {
LL | |     /// No value.
LL | |     #[lang = "None"]
LL | |     #[stable(feature = "rust1", since = "1.0.0")]
...  |
LL | |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
LL | | }
   | |_^
   = note: the matched value is of type `Option<Enum>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         None => (),
LL +         _ => todo!()
   |

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0004`.
